# Construction-de-Glushkov

./: README.md  base.ml  dune  dune-project  dune_project  glushkov.opam  setup.sh
lib/: #type.ml#  automate.ml  dune  lib.ml  os.ml  regex.ml  type.ml  verif_regex.ml  verif_regex.mli  verif_word.ml  verif_word.mli
src/: automate.ml  dune
test/: dune  glushkov.ml
